--- a/yet-another-attempt/src/global.css
+++ b/yet-another-attempt/src/global.css
@@ -20,3 +20,12 @@ body {
   background-size: cover; 
   transform: translateY(-2rem);
 }
+@keyframes flickerAnimation { /* flame pulses */
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+.animate-flicker {
+    opacity:1;  
+    animation: flickerAnimation 1s infinite;
+}
